# openChatCut

./: README.md  biome.json  package.json
apps/web/: .env.example  package.json
apps/web/src/app/: layout.tsx  sitemap.ts
apps/web/src/app/aichat/: page.tsx
apps/web/src/app/contributors/: page.tsx
apps/web/src/app/projects/: page.tsx
apps/web/src/components/: footer.tsx  header.tsx  locale-switcher.tsx  theme-toggle.tsx
apps/web/src/components/editor/: ai-chat-dock.tsx  (+1 more)
apps/web/src/i18n/: locales.ts  server.ts  translate.ts
apps/web/src/stores/: ai-chat-dock-store.ts  assets-panel-store.tsx
apps/web/src/types/: blog.ts
docs/: ai-editor-module.md  openchatcut-repo-migration.md  regression-hardening-2026-03-14.md
services/aicut-orchestrator/: .gitignore  README.md  pyproject.toml
services/aicut-orchestrator/docs/: development-log.md  fast-mvp-plan.md  implementation-plan.md  landing-checklist.md  opencut-bundle-spec.md  opencut-import-spike.md
services/aicut-orchestrator/examples/: basic.yaml  real-video-test.yaml
services/aicut-orchestrator/scripts/: opencut_import_spike.js
services/aicut-orchestrator/src/aicut/: cli.py  config.py  domain.py  pipeline.py
services/aicut-orchestrator/src/aicut/adapters/: __init__.py  asr.py  diarization.py  grok.py  opencut.py  otio.py  render.py  scenes.py
services/aicut-orchestrator/src/aicut/services/: __init__.py  candidates.py  scoring.py  selector.py  timeline.py
services/aicut-orchestrator/tests/: test_cli.py  test_grok_adapter.py  test_opencut_export.py  test_opencut_validation.py  test_selector.py
(+60 files in other folders)
